@@ -87,7 +87,6 @@ import com.facebook.buck.io.watchman.WatchmanOverflowEvent;
 import com.facebook.buck.io.watchman.WatchmanPathEvent;
 import com.facebook.buck.json.JsonObjectHashing;
 import com.facebook.buck.jvm.core.JavaLibrary;
-import com.facebook.buck.manifestservice.ManifestService;
 import com.facebook.buck.parser.config.ParserConfig;
 import com.facebook.buck.parser.config.ParserConfig.ApplyDefaultFlavorsMode;
 import com.facebook.buck.parser.events.ParseBuckFileEvent;
@@ -102,14 +101,12 @@ import com.facebook.buck.rules.coercer.TypeCoercerFactory;
 import com.facebook.buck.rules.keys.config.TestRuleKeyConfigurationFactory;
 import com.facebook.buck.shell.GenruleDescriptionArg;
 import com.facebook.buck.testutil.CloseableResource;
-import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.TemporaryPaths;
 import com.facebook.buck.testutil.TestConsole;
 import com.facebook.buck.testutil.integration.TestDataHelper;
 import com.facebook.buck.util.CreateSymlinksForTests;
 import com.facebook.buck.util.DefaultProcessExecutor;
 import com.facebook.buck.util.ProcessExecutor;
-import com.facebook.buck.util.ThrowingCloseableMemoizedSupplier;
 import com.facebook.buck.util.config.ConfigBuilder;
 import com.facebook.buck.util.environment.EnvVariablesProvider;
 import com.facebook.buck.util.environment.Platform;
@@ -179,7 +176,7 @@ public class ParserWithConfigurableAttributesTest {
   private Parser parser;
   private TypeCoercerFactory typeCoercerFactory;
   private ProjectFilesystem filesystem;
-  private Path cellRoot;
+  private AbsPath cellRoot;
   private BuckEventBus eventBus;
   private Cell cell;
   private KnownRuleTypesProvider knownRuleTypesProvider;
@@ -187,11 +184,6 @@ public class ParserWithConfigurableAttributesTest {
   private ListeningExecutorService executorService;
   private ExecutableFinder executableFinder;
   private ParsingContext parsingContext;
-
-  private static ThrowingCloseableMemoizedSupplier<ManifestService, IOException>
-      getManifestSupplier() {
-    return ThrowingCloseableMemoizedSupplier.of(() -> null, ManifestService::close);
-  }
 
   @Parameterized.Parameters(name = "project.parsing_threads={0}, project.parallel_parsing={1}")
   public static Collection<Object[]> generateData() {
@@ -224,20 +216,17 @@ public class ParserWithConfigurableAttributesTest {
     try (PerBuildState state =
         new PerBuildStateFactory(
                 typeCoercerFactory,
-                new DefaultConstructorArgMarshaller(typeCoercerFactory),
+                new DefaultConstructorArgMarshaller(),
                 knownRuleTypesProvider,
                 new ParserPythonInterpreterProvider(cell.getBuckConfig(), executableFinder),
                 WatchmanFactory.NULL_WATCHMAN,
                 eventBus,
-                getManifestSupplier(),
-                new FakeFileHashCache(
-                    ImmutableMap.of(buildFile, HashCode.fromBytes(new byte[] {1}))),
                 new ParsingUnconfiguredBuildTargetViewFactory(),
                 UnconfiguredTargetConfiguration.INSTANCE)
             .create(
                 ParsingContext.builder(cell, executor).setProfilingEnabled(enableProfiling).build(),
                 parser.getPermState())) {
-      AbstractParser.getTargetNodeRawAttributes(state, cell, buildFile).getTargets();
+      AbstractParser.getTargetNodeRawAttributes(state, cell, AbsPath.of(buildFile)).getTargets();
     }
   }
 
@@ -439,13 +428,13 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expect(HumanReadableException.class);
     thrown.expectMessage("When parsing ////cake:walk");
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         "genrule(name = 'cake', out = 'file.txt', cmd = '$(exe ////cake:walk) > $OUT')"
             .getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -454,14 +443,14 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expectMessage("Buck wasn't able to parse");
     thrown.expectMessage(Paths.get("foo/BUCK").toString());
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         "genrule(name = 'cake', out = 'foo.txt', cmd = '$(exe //foo:bar) > $OUT')".getBytes(UTF_8));
 
     buckFile = cellRoot.resolve("foo/BUCK");
-    Files.createDirectories(buckFile.getParent());
-    Files.write(buckFile, "I do not parse as python".getBytes(UTF_8));
+    Files.createDirectories(buckFile.getParent().getPath());
+    Files.write(buckFile.getPath(), "I do not parse as python".getBytes(UTF_8));
 
     parser.buildTargetGraph(
         parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:cake")));
@@ -473,14 +462,14 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expect(BuildFileParseException.class);
     thrown.expectMessage("Duplicate rule definition 'cake' found.");
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("export_file(name = 'cake', src = 'hello.txt')\n"
                 + "genrule(name = 'cake', out = 'file.txt', cmd = 'touch $OUT')\n")
             .getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -490,7 +479,7 @@ public class ParserWithConfigurableAttributesTest {
         "def foo(name): native.export_file(name=name)\n".getBytes(UTF_8),
         StandardOpenOption.APPEND);
     Files.write(testBuildFile, "foo(name='BUCK')\n".getBytes(UTF_8), StandardOpenOption.APPEND);
-    parser.getTargetNode(
+    parser.getTargetNodeAssertCompatible(
         parsingContext,
         BuildTargetFactory.newInstance("//java/com/facebook:foo"),
         DependencyStack.root());
@@ -501,11 +490,12 @@ public class ParserWithConfigurableAttributesTest {
     thrown.expect(BuildFileParseException.class);
     thrown.expectMessage("rules 'name' field must be a string.  Found None.");
 
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile, ("genrule(name = None, out = 'file.txt', cmd = 'touch $OUT')\n").getBytes(UTF_8));
+        buckFile.getPath(),
+        ("genrule(name = None, out = 'file.txt', cmd = 'touch $OUT')\n").getBytes(UTF_8));
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
   }
 
   @Test
@@ -598,9 +588,7 @@ public class ParserWithConfigurableAttributesTest {
     filterAllTargetsInProject(parser, parsingContext);
 
     // Process event.
-    parser
-        .getPermState()
-        .invalidateBasedOn(WatchmanOverflowEvent.of(AbsPath.of(filesystem.getRootPath()), ""));
+    parser.getPermState().invalidateBasedOn(WatchmanOverflowEvent.of(filesystem.getRootPath(), ""));
 
     // Call filterAllTargetsInProject to request cached rules.
     filterAllTargetsInProject(parser, parsingContext);
@@ -615,9 +603,7 @@ public class ParserWithConfigurableAttributesTest {
     filterAllTargetsInProject(parser, parsingContext);
 
     // Send overflow event.
-    parser
-        .getPermState()
-        .invalidateBasedOn(WatchmanOverflowEvent.of(AbsPath.of(filesystem.getRootPath()), ""));
+    parser.getPermState().invalidateBasedOn(WatchmanOverflowEvent.of(filesystem.getRootPath(), ""));
 
     // Call filterAllTargetsInProject to request cached rules.
     filterAllTargetsInProject(parser, parsingContext);
@@ -630,7 +616,7 @@ public class ParserWithConfigurableAttributesTest {
         .getPermState()
         .invalidateBasedOn(
             WatchmanPathEvent.of(
-                AbsPath.of(filesystem.getRootPath()),
+                filesystem.getRootPath(),
                 Kind.CREATE,
                 RelPath.of(Paths.get("java/com/facebook/Something.java"))));
 
@@ -666,18 +652,18 @@ public class ParserWithConfigurableAttributesTest {
             .getBytes(UTF_8),
         StandardOpenOption.APPEND);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     assertEquals(2, counter.calls);
 
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), configBuckFile)));
     parser.getPermState().invalidateBasedOn(event);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     // Test that the second call triggers re-parsing of all files.
     assertEquals("Should have invalidated cache.", 4, counter.calls);
@@ -719,18 +705,18 @@ public class ParserWithConfigurableAttributesTest {
             .getBytes(UTF_8),
         StandardOpenOption.APPEND);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     assertEquals(2, counter.calls);
 
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defsFile)));
     parser.getPermState().invalidateBasedOn(event);
 
-    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(parsingContext, buildTarget, DependencyStack.root());
 
     // Test that the second call triggers re-parsing of all files.
     assertEquals("Should have invalidated cache.", 4, counter.calls);
@@ -782,7 +768,7 @@ public class ParserWithConfigurableAttributesTest {
         .getPermState()
         .invalidateBasedOn(
             WatchmanPathEvent.of(
-                AbsPath.of(filesystem.getRootPath()),
+                filesystem.getRootPath(),
                 Kind.CREATE,
                 RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile))));
 
@@ -820,7 +806,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -859,7 +845,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.DELETE,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), testBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -898,7 +884,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.CREATE,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -939,7 +925,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -978,7 +964,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.DELETE,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByBuildFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -1017,7 +1003,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.CREATE,
             RelPath.of(
                 MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile)));
@@ -1057,7 +1043,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(
                 MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile)));
@@ -1097,7 +1083,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.DELETE,
             RelPath.of(
                 MorePaths.relativize(tempDir.getRoot().toRealPath(), includedByIncludeFile)));
@@ -1137,7 +1123,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.CREATE,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -1176,7 +1162,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -1215,7 +1201,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.DELETE,
             RelPath.of(MorePaths.relativize(tempDir.getRoot().toRealPath(), defaultIncludeFile)));
     parser.getPermState().invalidateBasedOn(event);
@@ -1255,7 +1241,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.CREATE,
             RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1308,7 +1294,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.CREATE,
             RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1347,7 +1333,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1387,7 +1373,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.DELETE,
             RelPath.of(Paths.get("java/com/facebook/SomeClass.java")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1426,7 +1412,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.CREATE,
             RelPath.of(Paths.get("java/com/facebook/MumbleSwp.Java.swp")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1465,7 +1451,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.MODIFY,
             RelPath.of(Paths.get("java/com/facebook/MumbleSwp.Java.swp")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1504,7 +1490,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
+            filesystem.getRootPath(),
             Kind.DELETE,
             RelPath.of(Paths.get("java/com/facebook/MumbleSwp.Java.swp")));
     parser.getPermState().invalidateBasedOn(event);
@@ -1543,9 +1529,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.CREATE,
-            RelPath.of(Paths.get("SomeClass.java__backup")));
+            filesystem.getRootPath(), Kind.CREATE, RelPath.of(Paths.get("SomeClass.java__backup")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1582,9 +1566,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.MODIFY,
-            RelPath.of(Paths.get("SomeClass.java__backup")));
+            filesystem.getRootPath(), Kind.MODIFY, RelPath.of(Paths.get("SomeClass.java__backup")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1621,9 +1603,7 @@ public class ParserWithConfigurableAttributesTest {
     // Process event.
     WatchmanPathEvent event =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.DELETE,
-            RelPath.of(Paths.get("SomeClass.java__backup")));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("SomeClass.java__backup")));
     parser.getPermState().invalidateBasedOn(event);
 
     // Call parseBuildFile to request cached rules.
@@ -1741,15 +1721,11 @@ public class ParserWithConfigurableAttributesTest {
     Files.write(testBarBuckFile, "java_library(name = 'bar')\n".getBytes(UTF_8));
     WatchmanPathEvent deleteEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.DELETE,
-            RelPath.of(Paths.get("foo").resolve("BUCK")));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("foo").resolve("BUCK")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
     WatchmanPathEvent modifyEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.MODIFY,
-            RelPath.of(Paths.get("bar").resolve("BUCK")));
+            filesystem.getRootPath(), Kind.MODIFY, RelPath.of(Paths.get("bar").resolve("BUCK")));
     parser.getPermState().invalidateBasedOn(modifyEvent);
 
     parser.buildTargetGraph(parsingContext, buildTargets);
@@ -1819,9 +1795,7 @@ public class ParserWithConfigurableAttributesTest {
     Files.delete(testBarJavaFile);
     WatchmanPathEvent deleteEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.DELETE,
-            RelPath.of(Paths.get("foo/Bar.java")));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("foo/Bar.java")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
 
     HashCode updatedHash = buildTargetGraphAndGetHashCodes(parser, fooLibTarget).get(fooLibTarget);
@@ -1849,14 +1823,10 @@ public class ParserWithConfigurableAttributesTest {
     Files.move(testFooJavaFile, testFooJavaFile.resolveSibling("Bar.java"));
     WatchmanPathEvent deleteEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.DELETE,
-            RelPath.of(Paths.get("foo/Foo.java")));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("foo/Foo.java")));
     WatchmanPathEvent createEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.CREATE,
-            RelPath.of(Paths.get("foo/Bar.java")));
+            (filesystem.getRootPath()), Kind.CREATE, RelPath.of(Paths.get("foo/Bar.java")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
     parser.getPermState().invalidateBasedOn(createEvent);
 
@@ -1928,7 +1898,7 @@ public class ParserWithConfigurableAttributesTest {
     BuildTarget fooLibTarget = BuildTargetFactory.newInstance("//foo", "lib");
 
     TargetNode<?> targetNode =
-        parser.getTargetNode(parsingContext, fooLibTarget, DependencyStack.root());
+        parser.getTargetNodeAssertCompatible(parsingContext, fooLibTarget, DependencyStack.root());
     assertThat(targetNode.getBuildTarget(), equalTo(fooLibTarget));
 
     SortedMap<String, Object> targetNodeAttributes =
@@ -1972,9 +1942,7 @@ public class ParserWithConfigurableAttributesTest {
     tempDir.newFile("bar/Baz.java");
     WatchmanPathEvent createEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.CREATE,
-            RelPath.of(Paths.get("bar/Baz.java")));
+            filesystem.getRootPath(), Kind.CREATE, RelPath.of(Paths.get("bar/Baz.java")));
     parser.getPermState().invalidateBasedOn(createEvent);
 
     {
@@ -2029,9 +1997,7 @@ public class ParserWithConfigurableAttributesTest {
     Files.delete(bazSourceFile);
     WatchmanPathEvent deleteEvent =
         WatchmanPathEvent.of(
-            AbsPath.of(filesystem.getRootPath()),
-            Kind.DELETE,
-            RelPath.of(Paths.get("bar/Baz.java")));
+            filesystem.getRootPath(), Kind.DELETE, RelPath.of(Paths.get("bar/Baz.java")));
     parser.getPermState().invalidateBasedOn(deleteEvent);
 
     {
@@ -2139,10 +2105,10 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void readConfigReadsConfig() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     BuildTarget buildTarget = BuildTargetFactory.newInstance("//", "cake");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2159,7 +2125,7 @@ public class ParserWithConfigurableAttributesTest {
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
     TargetNode<GenruleDescriptionArg> node =
         TargetNodes.castArg(
-                parser.getTargetNode(
+                parser.getTargetNodeAssertCompatible(
                     parsingContext.withCell(cell), buildTarget, DependencyStack.root()),
                 GenruleDescriptionArg.class)
             .get();
@@ -2169,9 +2135,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void emptyStringBuckConfigEntryDoesNotCauseInvalidation() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2188,12 +2154,14 @@ public class ParserWithConfigurableAttributesTest {
     Cell cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated.", 1, counter.calls);
@@ -2205,10 +2173,10 @@ public class ParserWithConfigurableAttributesTest {
     assumeTrue(Platform.detect() == Platform.MACOS);
     assumeTrue(AppleNativeIntegrationTestUtils.isApplePlatformAvailable(ApplePlatform.MACOSX));
 
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("cxx_library("
                 + "  name = 'lib', "
                 + "  srcs=glob(['*.c']), "
@@ -2244,10 +2212,10 @@ public class ParserWithConfigurableAttributesTest {
     assumeTrue(Platform.detect() == Platform.MACOS);
     assumeTrue(AppleNativeIntegrationTestUtils.isApplePlatformAvailable(ApplePlatform.MACOSX));
 
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("cxx_library(" + "  name = 'lib', " + "  srcs=glob(['*.c']) " + ")").getBytes(UTF_8));
 
     BuckConfig config =
@@ -2286,10 +2254,10 @@ public class ParserWithConfigurableAttributesTest {
     // We depend on Xcode platforms for this test.
     assumeTrue(Platform.detect() == Platform.MACOS);
 
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         ("cxx_library("
                 + "  name = 'lib', "
                 + "  srcs=glob(['*.c']), "
@@ -2330,11 +2298,11 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void countsParsedBytes() throws Exception {
-    Path buckFile = cellRoot.resolve("lib/BUCK");
-    Files.createDirectories(buckFile.getParent());
+    AbsPath buckFile = cellRoot.resolve("lib/BUCK");
+    Files.createDirectories(buckFile.getParent().getPath());
     byte[] bytes =
         ("genrule(" + "name='gen'," + "out='generated', " + "cmd='touch ${OUT}')").getBytes(UTF_8);
-    Files.write(buckFile, bytes);
+    Files.write(buckFile.getPath(), bytes);
 
     cell = new TestCellBuilder().setFilesystem(filesystem).build().getRootCell();
 
@@ -2388,12 +2356,12 @@ public class ParserWithConfigurableAttributesTest {
   @Test
   public void testVisibilityGetsChecked() throws Exception {
     Path visibilityData = TestDataHelper.getTestDataScenario(this, "visibility");
-    Path visibilityBuckFile = cellRoot.resolve("BUCK");
-    Path visibilitySubBuckFile = cellRoot.resolve("sub/BUCK");
-    Files.createDirectories(visibilityBuckFile.getParent());
-    Files.createDirectories(visibilitySubBuckFile.getParent());
-    Files.copy(visibilityData.resolve("BUCK.fixture"), visibilityBuckFile);
-    Files.copy(visibilityData.resolve("sub/BUCK.fixture"), visibilitySubBuckFile);
+    AbsPath visibilityBuckFile = cellRoot.resolve("BUCK");
+    AbsPath visibilitySubBuckFile = cellRoot.resolve("sub/BUCK");
+    Files.createDirectories(visibilityBuckFile.getParent().getPath());
+    Files.createDirectories(visibilitySubBuckFile.getParent().getPath());
+    Files.copy(visibilityData.resolve("BUCK.fixture"), visibilityBuckFile.getPath());
+    Files.copy(visibilityData.resolve("sub/BUCK.fixture"), visibilitySubBuckFile.getPath());
 
     parser.buildTargetGraph(
         parsingContext, ImmutableSet.of(BuildTargetFactory.newInstance("//:should_pass")));
@@ -2413,9 +2381,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenEnvChangesThenCachedRulesAreInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2437,7 +2405,8 @@ public class ParserWithConfigurableAttributesTest {
     Cell cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2453,7 +2422,8 @@ public class ParserWithConfigurableAttributesTest {
     cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2461,9 +2431,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenEnvAddedThenCachedRulesAreInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2477,7 +2447,8 @@ public class ParserWithConfigurableAttributesTest {
     Cell cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2493,7 +2464,8 @@ public class ParserWithConfigurableAttributesTest {
     cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2501,9 +2473,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenEnvRemovedThenCachedRulesAreInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2525,7 +2497,8 @@ public class ParserWithConfigurableAttributesTest {
     Cell cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config = FakeBuckConfig.builder().setFilesystem(filesystem).build();
@@ -2533,7 +2506,8 @@ public class ParserWithConfigurableAttributesTest {
     cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should have invalidated.", 2, counter.calls);
@@ -2541,9 +2515,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void whenUnrelatedEnvChangesThenCachedRulesAreNotInvalidated() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("")
             .join(
                 ImmutableList.of(
@@ -2566,7 +2540,8 @@ public class ParserWithConfigurableAttributesTest {
     Cell cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Call filterAllTargetsInProject to request cached rules.
     config =
@@ -2583,7 +2558,8 @@ public class ParserWithConfigurableAttributesTest {
     cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
 
     // Test that the second parseBuildFile call repopulated the cache.
     assertEquals("Should not have invalidated.", 1, counter.calls);
@@ -2591,9 +2567,9 @@ public class ParserWithConfigurableAttributesTest {
 
   @Test
   public void testSkylarkSyntaxParsing() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("\n")
             .join(
                 ImmutableList.of(
@@ -2610,14 +2586,15 @@ public class ParserWithConfigurableAttributesTest {
 
     Cell cell =
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
-    parser.getTargetNode(parsingContext.withCell(cell), buildTarget, DependencyStack.root());
+    parser.getTargetNodeAssertCompatible(
+        parsingContext.withCell(cell), buildTarget, DependencyStack.root());
   }
 
   @Test
   public void testSkylarkIsUsedWithoutPolyglotParsingEnabled() throws Exception {
-    Path buckFile = cellRoot.resolve("BUCK");
+    AbsPath buckFile = cellRoot.resolve("BUCK");
     Files.write(
-        buckFile,
+        buckFile.getPath(),
         Joiner.on("\n")
             .join(
                 ImmutableList.of("genrule(name = type(''), out = 'file.txt', cmd = 'touch $OUT')"))
@@ -2633,7 +2610,7 @@ public class ParserWithConfigurableAttributesTest {
         new TestCellBuilder().setFilesystem(filesystem).setBuckConfig(config).build().getRootCell();
 
     TargetNode<?> targetNode =
-        parser.getTargetNode(
+        parser.getTargetNodeAssertCompatible(
             parsingContext.withCell(cell),
             BuildTargetFactory.newInstance("//:string"),
             DependencyStack.root());
@@ -2738,13 +2715,11 @@ public class ParserWithConfigurableAttributesTest {
     try (PerBuildState state =
         new PerBuildStateFactory(
                 typeCoercerFactory,
-                new DefaultConstructorArgMarshaller(typeCoercerFactory),
+                new DefaultConstructorArgMarshaller(),
                 knownRuleTypesProvider,
                 new ParserPythonInterpreterProvider(cell.getBuckConfig(), executableFinder),
                 WatchmanFactory.NULL_WATCHMAN,
                 eventBus,
-                getManifestSupplier(),
-                new FakeFileHashCache(hashes),
                 new ParsingUnconfiguredBuildTargetViewFactory(),
                 UnconfiguredTargetConfiguration.INSTANCE)
             .create(ParsingContext.builder(cell, executor).build(), parser.getPermState())) {
@@ -2755,7 +2730,8 @@ public class ParserWithConfigurableAttributesTest {
                 parser.getTargetNodeRawAttributes(
                     state,
                     cell,
-                    parser.getTargetNode(parsingContext, buildTarget, DependencyStack.root()),
+                    parser.getTargetNodeAssertCompatible(
+                        parsingContext, buildTarget, DependencyStack.root()),
                     DependencyStack.root())));
       }
 
